[package]
name = "dicom2tiff-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]
default = []

[dependencies]
dicom2tiff = { path = "../core" }
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["FileSystemReadWriteOptions", "FileSystemSyncAccessHandle"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# debug = true
lto = true
opt-level = "z"
